<resources>
    <string name="app_name">Worship47</string>
    <string name="welcome_text">Добро пожаловать</string>
    <string name="log_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="email">Адрес электронной почты</string>
    <string name="first_password">Пароль</string>
    <string name="second_password">Повторите пароль</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="remember_login">Запомнить меня</string>
    <string name="incorrect_password">Неверный адрес электронной почты или пароль</string>
    <string name="passwords_not_the_same">Пароли не совпадают</string>
    <string name="lost_password">Забыли пароль?</string>
    <string name="dont_have_acc">Не зарегистрированны?</string>
    <string name="already_have_acc">Уже зарегистрированны?</string>
    <string name="first_hello_title">Удобство использования</string>
    <string name="first_hello_description">Песнями гораздо удобнее пользоваться, когда они все собраны вместе</string>
    <string name="second_hello_title">Поиск по любому слову</string>
    <string name="second_hello_description">Песни удобно искать не только по названию, но и по словам или фразам, которые упоминаются в ней</string>
    <string name="third_hello_title">Разделение по категориям</string>
    <string name="third_hello_description">Песни разделены по категорям, благодаря чему удобно найти нужную</string>
    <string name="all_songs">Все песни</string>
    <string name="main_songs">Основные</string>
    <string name="christmas_songs">Рождественские</string>
    <string name="easter_songs">Пасхальные</string>
    <string name="children_songs">Детские</string>
    <string name="author">Автор: %s</string>
    <string name="empty_list">Список песен пуст</string>
    <string name="ru_text">Русский</string>
    <string name="eng_text">Английский</string>
    <string name="chord_text">Аккорды</string>
    <string name="search_text">Введите текст для поиска</string>
    <string name="category">Категория: %s</string>
    <string name="translator">Перевод: %s</string>
    <string name="chords">Тональность</string>
    <string name="download_chords">Скачать аккорды %s</string>
    <string name="download_presentation">Скачать презентацию</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wait_until_downloading_end">Дождитесь окончания загрузки песен</string>

    <!--фильтрация-->
    <string name="select_for_filter">Выберете параметры для фильтрации</string>
    <string name="categories_for_sort">Категориии</string>
    <string name="chords_for_sort">Тональность</string>
    <string name="c">C(До)</string>
    <string name="d">D(Ре)</string>
    <string name="e">E(Ми)</string>
    <string name="f">F(Фа)</string>
    <string name="g">G(Соль)</string>
    <string name="a">A(Ля)</string>
    <string name="b">B(Си)</string>

    <string name="is_translated_for_sort">Только перевод</string>

    <string name="level_for_sort">Сложность</string>
    <string name="easy">Лёгкие</string>
    <string name="medium">Средние</string>
    <string name="hard">Сложные</string>

    <string name="clear_filter">очистить</string>
    <string name="apply_filter">применить</string>

    <string name="is_need_sort_for_alphabet">Сортировать по алфавиту</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>