<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startScreen.fragments.SecondFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg2"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp"
        android:background="@color/black_alpha">

        <TextView
            android:id="@+id/tv_second_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/second_hello_title"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="40sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_second_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_hello_description"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="40dp"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

    </LinearLayout>

</FrameLayout>